<resources>
    <string name="app_name">TestApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_weather_bottom">Weather</string>
    <string name="title_map_bottom">Map</string>
    <string name="title_calculator_bottom">Calculator</string>
    <string name="title_qr_code_scan_bottom">QR  Code</string>
    <string name="text_btn_scan">Scan</string>
    <string name="text_scan_qr_code_title">Scan QR code</string>
    <string name="text_scan_qr_code_description">Place QR code inside the frame, to scan please click Scan button or QR code image</string>
    <string name="error_google_play_services">Google Play services is not installed in your phone</string>
    <string name="denied_permission_qr_code">To scan barcode you need to give permission</string>
    <string name="denied_permission_location">To use map feature , you need to give a permission</string>
    <string name="text_humidity">Humidity</string>
    <string name="text_wind">Wind</string>
    <string name="text_baku">Baku</string>
    <string name="error_server">There is some problem while retrieving data</string>


    <string name="value_1">1</string>
    <string name="value_2">2</string>
    <string name="value_3">3</string>
    <string name="value_4">4</string>
    <string name="value_5">5</string>
    <string name="value_6">6</string>
    <string name="value_7">7</string>
    <string name="value_8">8</string>
    <string name="value_9">9</string>
    <string name="value_0">0</string>
    <string name="value_point">.</string>
    <string name="value_equal">=</string>
    <string name="value_plus">+</string>
    <string name="value_delete"><![CDATA[&lt;—]]></string>




</resources>