<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isScanning"
            type="boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.qrcode.QrCodeScannerFragment">

        <TextView
            android:id="@+id/text_view_qr_code_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/tthoves_bold"
            android:text="@string/text_scan_qr_code_title"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/text_view_qr_code_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/tthoves_regular"
            android:gravity="center"
            android:text="@string/text_scan_qr_code_description"
            android:textColor="@color/colorSilver"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_qr_code_title" />


        <me.dm7.barcodescanner.zbar.ZBarScannerView
            android:id="@+id/scannerView"
            isVisible="@{isScanning}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/button_scan"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_qr_code_description" />


        <ImageView
            android:id="@+id/image_view_qr_code_scanner"
            isVisible="@{!isScanning}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="32dp"
            android:padding="32dp"
            android:src="@drawable/image_qr_code_scanner"
            app:layout_constraintBottom_toTopOf="@id/button_scan"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_qr_code_description" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_qr_code_result"
                android:layout_width="0dp"
                app:layout_constraintTop_toBottomOf="@id/image_view_qr_code_scanner"
                app:layout_constraintBottom_toTopOf="@id/button_scan"
                android:padding="16dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/tthoves_regular"
                tools:text="Result Text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="0dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_scan"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/tthoves_medium"
            android:padding="16dp"
            android:text="@string/text_btn_scan"
            android:textColor="@color/colorButtonText"
            android:textSize="16sp"
            app:backgroundTint="@color/colorAccent"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="@color/colorAccentRipple"
            app:strokeColor="@color/colorAccentRipple"
            app:strokeWidth="1dp">

        </com.google.android.material.button.MaterialButton>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>