<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="weather"
            type="com.mmk.testapplication.model.WeatherData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWeatherBackground"
        tools:context=".ui.fragments.weather.WeatherFragment">


        <TextView
            android:id="@+id/text_view_weather_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/tthoves_medium"
            android:text="@{weather.description}"
            tools:text="Broken\nclouds"
            android:textColor="#fff"
            android:textSize="32sp"

            app:layout_constraintStart_toStartOf="@id/text_view_weather_country" />

       <ImageView
           android:id="@+id/image_view_weather_icon"
           android:layout_width="200dp"
           app:layout_constraintTop_toBottomOf="@id/text_view_weather_description"
           app:layout_constraintBottom_toTopOf="@id/text_view_weather_country"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_margin="32dp"
           tools:src="@drawable/ic_cloud"
           imageUrl="@{weather.imageUrl}"
           android:scaleType="centerCrop"
           android:layout_height="200dp"/>

        <ImageView
            android:id="@+id/image_view_weather_location"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_location"
            android:tint="#fff"
            app:layout_constraintBottom_toBottomOf="@id/text_view_weather_country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_view_weather_country" />

        <TextView
            android:id="@+id/text_view_weather_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/tthoves_medium"
            tools:text="@string/text_baku"
            android:text="@{weather.country}"
            android:textColor="#fff"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@id/text_view_weather_value"
            app:layout_constraintStart_toEndOf="@id/image_view_weather_location" />

        <TextView
            android:id="@+id/text_view_weather_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/tthoves_bold"
            android:textColor="#fff"
            android:textSize="64sp"
            android:text="@{weather.temperature}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/text_view_weather_country"
            tools:text="32\u00B0" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_weather_speed"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/colorBox"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="8dp"
            app:layout_constraintBottom_toBottomOf="@id/text_view_weather_value"
            app:layout_constraintEnd_toStartOf="@id/card_view_weather_humidity"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/text_view_weather_value"
            app:layout_constraintTop_toTopOf="@id/text_view_weather_value">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tthoves_regular"
                    android:text="@string/text_wind"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/text_view_weather_wind_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/tthoves_medium"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:text="@{weather.windSpeed}"

                    tools:text="16m/s" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_weather_humidity"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/colorBox"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="8dp"
            app:layout_constraintBottom_toBottomOf="@id/text_view_weather_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_view_weather_value">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tthoves_regular"
                    android:text="@string/text_humidity"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/text_view_weather_humidity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/tthoves_medium"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:text="@{weather.humidity}"
                    tools:text="79%" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>